// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerListSearch /> opens 'filters' dropdown 1`] = `
<div
  className="EmployerListSearch__Container"
>
  <div
    className="EmployerListSearch__SearchContainer"
  >
    <div
      className="EmployerListSearch__InputContainer"
    >
      <div
        className="EmployerListSearch__Input"
      >
        <i
          className="material-icons"
        >
          search
        </i>
        <input
          defaultValue=""
          onInput={[Function]}
          placeholder="§èářçλ"
          type="search"
        />
      </div>
      <button
        className="EmployerListSearch__ExpandFilters EmployerListSearch__ExpandFilters--Open"
        onClick={[Function]}
      >
        <i
          className="material-icons"
        >
          filter_list
        </i>
        Fïℓƭèřƨ
      </button>
    </div>
    <div
      className="EmployerListSearch__FilterContainer"
    >
      [component: InternationalTypeFilterControl filter=([object Object]) onUpdateFilter=([Function]) /]
      [component: EmployeeCountFilterControl filter=([object Object]) onUpdateFilter=([Function]) /]
    </div>
  </div>
  <div
    className="EmployerListSearch__ViewTypeContainer"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        view_headline
      </i>
    </button>
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        view_module
      </i>
    </button>
  </div>
</div>
`;

exports[`<EmployerListSearch /> renders without exploding 1`] = `
<div
  className="EmployerListSearch__Container"
>
  <div
    className="EmployerListSearch__SearchContainer"
  >
    <div
      className="EmployerListSearch__InputContainer"
    >
      <div
        className="EmployerListSearch__Input"
      >
        <i
          className="material-icons"
        >
          search
        </i>
        <input
          defaultValue=""
          onInput={[Function]}
          placeholder="§èářçλ"
          type="search"
        />
      </div>
      <button
        className="EmployerListSearch__ExpandFilters EmployerListSearch__ExpandFilters--Closed"
        onClick={[Function]}
      >
        <i
          className="material-icons"
        >
          filter_list
        </i>
        Fïℓƭèřƨ
      </button>
    </div>
  </div>
  <div
    className="EmployerListSearch__ViewTypeContainer"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        view_headline
      </i>
    </button>
    <button
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        view_module
      </i>
    </button>
  </div>
</div>
`;
